--- a/style.css
+++ b/style.css
@@ -8,19 +8,27 @@ body {
     font-size: 20px;
 }
 
-.control_panel {
+
+.parameters {
     background: rgb(203, 203, 203);
-    padding: 15px 25px;
+    padding: 15px;
     border-radius: 8px;
     display: flex;
     gap: 20px;
     justify-content: center;
 }
 
-select, input, button {
+select, input {
     padding: 5px;
     border-radius: 4px;
     width: 80px;
+}
+
+button {
+    border: 0px;
+    height: 30px;
+    width: 80px;
+    border-radius: 4px;
 }
 
 #apply{
@@ -63,10 +71,10 @@ select, input, button {
 #display{
     background: rgb(242, 242, 242);
     border: 1px solid rgba(99, 99, 99, 0.51);
-    width: 60vw;
+    width: 1100px;
     min-height: 50px;
     font-size: 16px;
-    border-radius: 4px;
+    border-radius: 8px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -82,7 +90,7 @@ select, input, button {
 }
 
 #reset{
-    background-color: rgba(255, 99, 71, 0.672);
+    background-color: rgba(255, 212, 71, 0.914);
 }
 
 
